[CrOS Tether] Shut down Tether before disabling in NetworkStateHandler.

Previously, we would disable Tether networks in NetworkStateHandler
before shutting down the Tether component, leaving open the possibility
that after Tether networks were disabled but before the component was
shut down, Tether code could interact with NetworkStateHandler. This
race condition caused occasional browser crashes.

This CL also:
(1) Changes some TetherService function names to be more appropriate.
(2) Changes a DCHECK() in NetworkStateHandler to an error log and an
    early return to prevent the possibility of a browser crash when it
    was not necessary to do so.

Bug: 747644, 672263
Change-Id: I8687ffa141efd9fe0eac0875fb58f4556dd24452